--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tokopakedi-play-react",
+  "name": "tokopidio-play-react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
